p align issue fixed

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./images/carousel-1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block text-center">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./images/carousel-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block text-center">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="./images/carousel-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-md-block text-center">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
                         </div>
@@ -138,7 +138,7 @@
         <!--============================ Carousel End ============================== -->
         <!--============================ Legal Counsel Section Start ============================== -->
         <div class="bg-light pb-5">
-            <div class="container pt-5 px-5 mb-5">
+            <div class="container pt-5 px-5 mb-5 p-align">
                 <h1 class="text-center">Legal Counsel</h1>
                 <hr class="w-25 mx-auto">
                 <p><b>LEGAL COUNSEL</b> is one of the leading firms of Bangladesh having its main office located at the
@@ -170,7 +170,7 @@
         </div>
         <!--================== Legal Counsel Section End ===================== -->
         <!--================== Law Practise Area Section Start ===================== -->
-        <div class="container py-5 px-5">
+        <div class="container py-5 px-5 p-align">
             <div class="text-center mb-5">
                 <h6>WHAT WE ARE EXPERT AT</h6>
                 <h1>Legal Practice Areas</h1>
@@ -182,7 +182,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -194,7 +195,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -206,7 +208,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -218,7 +221,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -230,7 +234,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -242,7 +247,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -254,7 +260,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -266,7 +273,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -278,7 +286,8 @@
                         <img src="./icons/profits.png" class="card-img-top w-25 mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><b>Foreign Investments</b></h5>
-                            <p class="card-text">Foreign investment refers to the flow of capital from one nation to
+                            <p class="card-text p-align">Foreign investment refers to the flow of capital from one
+                                nation to
                                 another via long term participation by one country into the ownership stakes of domestic
                             </p>
                             <a href="#">Learn More<i class="fa-solid fa-arrow-right ps-1"></i></a>
@@ -304,7 +313,8 @@
                     </div>
                     <div>
                         <h3>Legal Service</h3>
-                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                        <p class="p-align">We are a full-service law firm proficient in providing commendable legal
+                            services in a
                             timely and professional manner. Our core practice areas include Labor and Employment
                             Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
                             Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
@@ -321,7 +331,8 @@
                     </div>
                     <div>
                         <h3>Legal Service</h3>
-                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                        <p class="p-align">We are a full-service law firm proficient in providing commendable legal
+                            services in a
                             timely and professional manner. Our core practice areas include Labor and Employment
                             Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
                             Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
@@ -338,7 +349,8 @@
                     </div>
                     <div>
                         <h3>Legal Service</h3>
-                        <p>We are a full-service law firm proficient in providing commendable legal services in a
+                        <p class="p-align">We are a full-service law firm proficient in providing commendable legal
+                            services in a
                             timely and professional manner. Our core practice areas include Labor and Employment
                             Law, Contract Law, Business Law and Commercial Law, Corporate Law and Company Law,
                             Family Law, Foreign Direct Investment, Taxation, Telecommunication and ICT Law, Banking
