team & form section completed

--- a/index.html
+++ b/index.html
@@ -394,6 +394,178 @@
             </div>
         </div>
         <!--================== Counter Section end ===================== -->
+        <!--================== My Team Section Start ===================== -->
+        <div class="our-team-section">
+            <div class="container text-center py-5">
+                <h1 class="text-white">Our Team</h1>
+                <hr class="mx-auto hr-white">
+                <div class="row g-5 mt-3">
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/team/BARRISTER-OMAR-H-KHAN.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-text"><b>BARRISTER OMAR H. KHAN</b></h6>
+                                <p class="card-text">PARTNER AND HEAD OF CHAMBERS</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--================== My Team Section end ===================== -->
+        <!--================== Form Section Start ===================== -->
+        <div class="queries-section">
+            <div class="container py-5 px-5">
+                <h1 class="text-white text-center">Drop Your Queries</h1>
+                <hr class="mx-auto hr-white">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text" placeholder="Your Name *" required>
+                    </div>
+                    <div class="col-6">
+                        <input type="email" placeholder="Your Email *" required>
+                    </div>
+                    <div class="col-6">
+                        <input type="number" placeholder="Phone Number">
+                    </div>
+                    <div class="col-6">
+                        <input type="text" placeholder="Your Company Name *" required>
+                    </div>
+                    <div class="col-12">
+                        <textarea name="message" id="message-field" cols="30" rows="10"
+                            placeholder="Write Your Message Here *" required></textarea>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-color d-block mx-auto mt-5">Submit Now</button>
+            </div>
+        </div>
+        <!--================== Form Section end ===================== -->
     </main>
 
 
