--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <div class="d-inline">
                     <div class="d-inline">
                         <i class="fa-solid fa-envelope text-white"></i>
-                        <p class="d-inline text-primary">info@kabirandassociatesbd.com</p>
+                        <p class="d-inline text-warning">info@kabirandassociatesbd.com</p>
                     </div>
                     <div class="d-inline">
                         <i class="fa-solid fa-phone text-white"></i>
-                        <p class="d-inline text-primary">Dhaka: +88028835174-6; Chattogram: +88 09678 677 688</p>
+                        <p class="d-inline text-warning">Dhaka: +88028835174-6; Chattogram: +88 09678 677 688</p>
                     </div>
                 </div>
                 <div class="text-center">
@@ -56,10 +56,10 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link active text-white" href="#">About Us</a>
+                                    <a class="nav-link active text-white" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active text-white" href="#">Practice Areas</a>
@@ -99,6 +99,8 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -106,6 +108,13 @@
                         <div class="carousel-caption d-none d-md-block text-center">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/supreme court 01.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <div class="carousel-caption d-none d-md-block text-center">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
