--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <a class="nav-link active text-white" href="practise-areas.html">Practice Areas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="#">Our Team</a>
+                                    <a class="nav-link active text-white" href="our-team.html">Our Team</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -73,11 +73,11 @@
                                         News & Events
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Tv Shows</a></li>
+                                        <li><a class="dropdown-item" href="blog.html">Blog</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="#">Contact Us</a>
+                                    <a class="nav-link active text-white" href="contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
